Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -18,8 +18,8 @@
     "account-data-missing": "V účtu chybí data",
     "account-dot-code": "Tečka doplňuje nuly. Například: 11.1 = 1100000001",
     "account-length": "Délka podúčtu",
-    "account-length-error": "Longitud de subcuenta errónea. La subcuenta %code% debe tener la longitud definida en el ejercicio.",
-    "account-missing-in-balance": "La cuenta %codcuenta% tiene saldo pero no está incluida en los balances. Considere incluirla si el balance sale descuadrado.",
+    "account-length-error": "Chybná délka podúčtu. Podúčet %code% musí mít délku definovanou v účetním období.",
+    "account-missing-in-balance": "Účet %codcuenta% má zůstatek, ale není zahrnut v závěru. Uvažte o jeho zahrnutí, pokud vám zůstatek nevyjde.",
     "account-parent-error": "La cuenta padre es incorrecta o no pertenece al ejercicio",
     "accounting": "Contabilidad",
     "accounting-accounts": "Cuentas contables",
@@ -44,7 +44,7 @@
     "accounting-reports": "Informes contables",
     "accounting-within-regularization": "Ya hay una regularización de impuestos en este periodo. No se pueden hacer cambios.",
     "accounts": "Účty",
-    "accrual-date": "Fecha devengo",
+    "accrual-date": "Data přistoupení",
     "action": "Akce",
     "actions": "Akce",
     "active": "Aktivní",
@@ -53,7 +53,7 @@
     "add-all-disabled": "Añadir todo Deshabilitado",
     "add-all-enabled": "Añadir todo activado",
     "add-extra-lines": "Añadir líneas extra",
-    "add-file": "Añadir archivo",
+    "add-file": "Přidat soubor",
     "add-invoices": "Añadir facturas",
     "add-new-plugin": "Añadir nuevo plugin",
     "additional-text": "Texto adicional",
@@ -93,14 +93,14 @@
     "amount-without-discount": "Precio sin descuento",
     "and": "y",
     "any": "Cualquier",
-    "any-group": "Cualquier grupo",
+    "any-group": "Jakákoliv skupina",
     "apache-module-not-found": "Módulo de apache no encontrado: %module%",
     "apc-clear": "APC limpiado.",
     "apc-delete-key-item": "Eliminado elemento '%item%' de APC.",
     "apc-get-key-item": "Obtenido elemento '%item%' desde APC.",
     "apc-set-key-item": "Asignado elemento '%item%' a APC.",
     "api": "API",
-    "api-disabled": "API desactivada. Puede activarla desde preferencias de aplicación.",
+    "api-disabled": "API deaktivováno. Můžete jej povolit v nastavení aplikace.",
     "api-key": "API key",
     "api-keys": "API Keys",
     "api-version-not-found": "Versión de API no encontrada",
