--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -62,7 +62,7 @@
     "addresses-and-contacts": "Adressen und Kontakte",
     "admin": "Administrator",
     "administrator": "Verwalter",
-    "adult": "Adulto",
+    "adult": "Erwachsene",
     "advanced": "Avanzado",
     "agent": "Agent",
     "agent-commission-info": "gilt nur für den ausgewählten Agenten",
@@ -76,24 +76,24 @@
     "alias-general-info": "erlaubt dem Wert der linken Spalte einen Namen zu geben.",
     "alias-wildcard-info": "Wert des zuvor definierten Alias. Beispiel:%import%, %vat%",
     "all": "Alles",
-    "all-variants": "Todas las variantes",
+    "all-variants": "Alle Varianten",
     "allow-delete": "Löschen zulassen",
     "allow-delete-data": "Löschen erlaubt",
-    "allow-export": "Permitir exportar",
+    "allow-export": "Erlauben Exportieren",
     "allow-get-data": "GET erlauben",
-    "allow-import": "Permitir importar",
+    "allow-import": "Erlauben Importieren",
     "allow-marketing": "Marketing erlauben",
     "allow-post-data": "Änderungen erlauben",
     "allow-put-data": "hinzufügen erlauben",
     "allow-sale-without-stock": "Verkauf ohne Lager zulassen",
     "allow-sale-without-stock-n": "Verkauf ohne Lagerbestand für neue Produkte zulassen",
     "allow-update": "Aktualisierung zulassen",
-    "always-to-company-email": "Siempre al email de la empresa",
+    "always-to-company-email": "Immer an die Unternehmens-E-Mail",
     "amount": "Menge",
     "amount-without-discount": "Preis ohne Rabatt",
-    "and": "and",
+    "and": "und",
     "any": "Irgendein",
-    "any-group": "Cualquier grupo",
+    "any-group": "Jede Gruppe",
     "apache-module-not-found": "Apache module nicht gefunden",
     "apc-clear": "APC hat geklärt.",
     "apc-delete-key-item": "Element '0' von APC gelöscht",
@@ -103,10 +103,10 @@
     "api-disabled": "API deaktiviert. Sie können es in den Anwendungseinstellungen aktivieren.",
     "api-key": "API key",
     "api-keys": "API Keys",
-    "api-version-not-found": "Versión de API no encontrada",
+    "api-version-not-found": "API-Version nicht gefunden",
     "app-preferences": "App-Einstellungen",
     "applied-tax": "angewandte Steuer",
-    "apply": "Aplicar",
+    "apply": "Anwenden",
     "approve": "Aprobar",
     "approve-document": "Dokument genehmigen",
     "approve-document-same-date": "Dokument zum gleichen Datum genehmigen",
