--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -205,7 +205,7 @@
     "cant-load-controller": "Can't load controller '%controllerName%'.",
     "cant-modify-reference": "Cann't edit reference.",
     "cant-remove-accounting-entry": "Can't remove accounting entry",
-    "cant-remove-invoice-refund": "No se puede eliminar una factura que ya tiene rectificativa (devolución)",
+    "cant-remove-invoice-refund": "You cannot delete an invoice that already has a refund",
     "cant-remove-receipt": "Can't remove the receipt",
     "cant-update-audit-log": "Cannot modify an audit record",
     "card": "Card",
@@ -324,7 +324,7 @@
     "counterpart": "Counterpart",
     "countries": "Countries",
     "country": "Country",
-    "country-not-in-eu": "El %codiso% no pertenece a ningún país de la unión Europea",
+    "country-not-in-eu": "%codiso% does not belong to any country in the European Union",
     "create": "Create",
     "create-accounting-entry": "Create Accounting Entry",
     "create-delivery-note": "Create delivery note",
@@ -340,7 +340,7 @@
     "crons": "Crons",
     "currency": "Currency",
     "currency-position": "Currency position",
-    "current-quarter": "Trimestre actual",
+    "current-quarter": "Current quarter",
     "current-risk": "Current risk",
     "customer": "Customer",
     "customer-account-not-found": "Customer account not found",
@@ -386,7 +386,7 @@
     "dateentry-wildcard-info": "Date indicated in the head of the accounting entry",
     "day": "Day",
     "days": "Days",
-    "days-log-retention": "Nº días retención logs",
+    "days-log-retention": "Number of days log retention",
     "days-until-expiration": "Days until expiration",
     "db-host": "Database Server",
     "db-name": "Database name",
@@ -413,7 +413,7 @@
     "delete-closing": "Eliminate closing account entries",
     "delete-data": "Delete data",
     "delete-file": "Delete file",
-    "delete-logs": "Eliminar historial",
+    "delete-logs": "Delete logs",
     "delete-opening": "Remove account opening entry",
     "delete-record": "Remove record",
     "Deleted": "Deleted",
@@ -456,7 +456,7 @@
     "disable": "Disable",
     "disable-plugins": "Disable plugins",
     "disabled": "Disabled",
-    "disabled-plugins": "Plugins desactivados",
+    "disabled-plugins": "Disabled plugins",
     "discharge-date": "Discharge date: %date%",
     "discount": "Discount",
     "display": "Display",
