--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -53,7 +53,7 @@
     "add-all-disabled": "gehitu dena ezgaitua",
     "add-all-enabled": "Aktibatutako guztiak gehitu",
     "add-extra-lines": "Gehitu lerro gehigarriak",
-    "add-file": "Añadir archivo",
+    "add-file": "Fitxategi bat gehitu",
     "add-invoices": "Gehitu fakturak",
     "add-new-plugin": "Plugin berria gehitu",
     "additional-text": "Testu gehigarria",
@@ -93,7 +93,7 @@
     "amount-without-discount": "Prezioa beherapenik gabe",
     "and": "eta",
     "any": "Edozein",
-    "any-group": "Cualquier grupo",
+    "any-group": "Talde batzuk",
     "apache-module-not-found": "Apache moduloa ez da aurkitu: %module%",
     "apc-clear": "APC garbitu da.",
     "apc-delete-key-item": "Ezabatu da '%item%' elementua APC-tik.",
@@ -111,7 +111,7 @@
     "approve-document": "Dokumentua onartu",
     "approve-document-same-date": "Data berean onartu dokumentua",
     "approved": "Onartuta",
-    "april": "Abril",
+    "april": "Apirila",
     "are-you-sure": "Hau ezin da desegin. Ziur zaude jarraitu nahi duzula?",
     "are-you-sure-action": "Ekintza honek berrespena behar du. Ziur zaude jarraitu nahi duzula?",
     "asset": "Aktiboa",
@@ -125,15 +125,15 @@
     "attribute-value-4": "4. ezaugarria",
     "attribute-values": "Atributu balioak",
     "attributes": "Atributuak",
-    "audio": "Audio",
-    "august": "Agosto",
+    "audio": "Audioa",
+    "august": "Abuztua",
     "auth-token-invalid": "Calve de API no válida",
     "authentication": "Autentifikazioa",
     "auto": "Auto",
     "auto-apply-to": "Automatikoki aplikatu honi",
     "automatic": "Automatikoa",
     "available": "Eskuragarri",
-    "average": "Media",
+    "average": "Batazbestekoa",
     "average-cost": "Batez besteko prezioa",
     "average-purchase-price": "Batez besteko erosketa-prezioa",
     "back": "Itzuli",
@@ -166,22 +166,22 @@
     "book": "Erreserbatu",
     "box-closed-ok": "Kutxa ondo itxita",
     "boxes": "Kutxak",
-    "browse": "Examinar",
+    "browse": "Lanatu",
     "business-name": "Enpresaren izena",
     "buy": "Erosi",
     "cache": "Cache",
     "cache-dir": "Cache-aren karpeta '%folderName%'",
     "calculate": "Kalkulatu",
-    "calculated-net-diff": "Diferencia encontrada al calcular el neto. %net% VS %net2%",
-    "calculated-surcharge-diff": "Diferencia encontrada al calcular el recargo de equivalencia. %surcharge% VS %surcharge2%",
-    "calculated-tax-diff": "Diferencia encontrada al calcular el total de IVA. %tax% VS %tax2%",
+    "calculated-net-diff": "Aurkitu den desberdinotasuna netoa kalkulatzean. %net% VS %net2%",
+    "calculated-surcharge-diff": "Aurkitu den desberdinotasuna kargatzeko suplementua kalkulatzean. %surcharge% VS %surcharge2%",
+    "calculated-tax-diff": "Aurkitu den desberdinotasuna IVA osoa kalkulatzean. %tax% VS %tax2%",
     "calculation": "Kalkulua",
     "calendar": "Egutegia",
     "can-not-open-zip-file": "Ezin da '%zipFile%' zip artxiboa ireki",
     "cancel": "Ezeztatu",
     "cancel-data": "Aldaketak edo eragiketa ezeztatu",
     "cancelled": "Ezeztatuta",
-    "cannot-generate-accounting-entry": "Error al generar el asiento de la factura %invoice%",
+    "cannot-generate-accounting-entry": "Errorea fakturaren asientoa sortzean %invoice%",
     "cant-assign-date-already-regularized": "Ezin duzu %date% data esleitu, dagoeneko %tax%(e)ko erregularizazioa dagoelako epe horrentzat.",
     "cant-assing-subaccount-supplier": "%supplierCode% azpikontua ezin zaio esleitu hornitzaileari",
     "cant-associate-customer-subaccount": "%customerCode% azpikontua ezin zaio esleitu bezeroari",
