--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -53,7 +53,7 @@
     "add-all-disabled": "Ajouter tous les handicapés",
     "add-all-enabled": "Ajouter tous les éléments activés",
     "add-extra-lines": "Ajouter des lignes supplémentaires au nouveau document",
-    "add-file": "Añadir archivo",
+    "add-file": "Ajouter un fichier",
     "add-invoices": "Ajouter factures",
     "add-new-plugin": "Ajouter un nouveau plugin",
     "additional-text": "Texte aditionnel",
@@ -76,24 +76,24 @@
     "alias-general-info": "Vous permet de donner un nom à la valeur de la colonne sur votre gauche",
     "alias-wildcard-info": "Valeur de l'alias précédemment définie. Exemple : %import%, %vat%",
     "all": "Tout",
-    "all-variants": "Todas las variantes",
+    "all-variants": "Toutes les variantes",
     "allow-delete": "Autoriser la suppression",
     "allow-delete-data": "Autoriser SUPPRIMER",
-    "allow-export": "Permitir exportar",
+    "allow-export": "Autoriser l'export",
     "allow-get-data": "Permettre l'accès",
-    "allow-import": "Permitir importar",
+    "allow-import": "Autoriser l'import",
     "allow-marketing": "Autoriser le marketing",
     "allow-post-data": "Autoriser modifier",
     "allow-put-data": "Autoriser PUT",
     "allow-sale-without-stock": "Autoriser la vente sans stock",
     "allow-sale-without-stock-n": "Autoriser la vente des nouveaux produits sans stock",
     "allow-update": "Autoriser la mise à jour",
-    "always-to-company-email": "Siempre al email de la empresa",
+    "always-to-company-email": "Toujours à l'email de l'entreprise",
     "amount": "Montant",
     "amount-without-discount": "Quantité sans remise",
     "and": "et",
     "any": "Tout",
-    "any-group": "Cualquier grupo",
+    "any-group": "Tout groupe",
     "apache-module-not-found": "Le module Apache %module% n'a pas été trouvé",
     "apc-clear": "APC effacé.",
     "apc-delete-key-item": "Élément supprimé '%item%' d'APC.",
@@ -103,7 +103,7 @@
     "api-disabled": "API désactivée",
     "api-key": "Clé API",
     "api-keys": "Clés de l'API",
-    "api-version-not-found": "Versión de API no encontrada",
+    "api-version-not-found": "Version d'API non trouvée",
     "app-preferences": "Préférences de l'application",
     "applied-tax": "Taxe appliquée",
     "apply": "Appliquer",
@@ -111,11 +111,11 @@
     "approve-document": "Approuver le document",
     "approve-document-same-date": "Approuver le document de la même date",
     "approved": "Approuvé",
-    "april": "Abril",
+    "april": "Avril",
     "are-you-sure": "Cette opération ne peut être annulée. Êtes-vous sûr de vouloir continuer ?",
     "are-you-sure-action": "Cette action nécessite une confirmation. Êtes-vous sûr de vouloir continuer?",
     "asset": "Actif",
-    "assigned": "Asignado",
+    "assigned": "Assigné",
     "attached-file": "Pièce jointe",
     "attached-files": "Fichiers joints",
     "attribute": "Attribut",
@@ -126,14 +126,14 @@
     "attribute-values": "Valeur d'attribut",
     "attributes": "Les attributs",
     "audio": "Audio",
-    "august": "Agosto",
-    "auth-token-invalid": "Calve de API no válida",
+    "august": "Août",
+    "auth-token-invalid": "Jeton d'authentification invalide",
     "authentication": "Authentification",
     "auto": "Auto",
     "auto-apply-to": "Appliquer automatiquement à",
     "automatic": "Automático",
     "available": "Disponible",
-    "average": "Media",
+    "average": "Moyenne",
     "average-cost": "Coût moyen",
     "average-purchase-price": "Prix d'achat moyen",
     "back": "Retour",
@@ -151,7 +151,7 @@
     "bank-accounts": "comptes bancaires",
     "bank-mandate": "Mandat",
     "bank-mandate-date": "Date du mandat",
-    "banking-movements": "Movimientos bancarios",
+    "banking-movements": "Mouvements bancaires",
     "barcode": "code à barre",
     "bcc": "CCI",
     "big": "Grand",
