--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -76,22 +76,22 @@
     "alias-general-info": "Allows you to give a name to the value of the column on your left",
     "alias-wildcard-info": "Alias value previously defined. Example: %import%, %vat%",
     "all": "Tutti",
-    "all-variants": "Todas las variantes",
+    "all-variants": "Tutte le varianti",
     "allow-delete": "Consenti eliminazione",
     "allow-delete-data": "Allow DELETE",
-    "allow-export": "Permitir exportar",
+    "allow-export": "Consentire l'esportazione",
     "allow-get-data": "Allow GET",
-    "allow-import": "Permitir importar",
+    "allow-import": "Consentire l'importazione",
     "allow-marketing": "allow-marketing",
     "allow-post-data": "Allow POST",
     "allow-put-data": "Allow PUT",
     "allow-sale-without-stock": "Allow sale without stock",
-    "allow-sale-without-stock-n": "allow-sale-without-stock-n",
+    "allow-sale-without-stock-n": "consentire-vendita-senza-stock-n",
     "allow-update": "Consenti aggiornamento",
     "always-to-company-email": "Sempre alla mail aziendale",
     "amount": "Quantità",
     "amount-without-discount": "Ammount without discount",
-    "and": "and",
+    "and": "e",
     "any": "Qualunque",
     "any-group": "Qualsiasi gruppo",
     "apache-module-not-found": "apache-module-not-found",
@@ -103,19 +103,19 @@
     "api-disabled": "api-disabled",
     "api-key": "API key",
     "api-keys": "API Keys",
-    "api-version-not-found": "Versión de API no encontrada",
+    "api-version-not-found": "Versione API non trovata",
     "app-preferences": "Preferenze app",
     "applied-tax": "applied-tax",
     "apply": "Applica",
-    "approve": "Aprobar",
+    "approve": "Approvare",
     "approve-document": "Approvare documento",
-    "approve-document-same-date": "approve-document-same-date",
-    "approved": "approved",
-    "april": "Abril",
+    "approve-document-same-date": "approva-documento-stessa-data",
+    "approved": "approvato",
+    "april": "Aprile",
     "are-you-sure": "Questa azione non può essere annullata. Sei sicuro di voler continuare?",
     "are-you-sure-action": "Questa azione richiede conferma. Sei sicuro di voler continuare?",
     "asset": "Asset",
-    "assigned": "Asignado",
+    "assigned": "Assegnato",
     "attached-file": "Attached file",
     "attached-files": "Attached files",
     "attribute": "Attributo",
