--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -53,7 +53,7 @@
     "add-all-disabled": "Añadir todo Deshabilitado",
     "add-all-enabled": "Añadir todo activado",
     "add-extra-lines": "Añadir líneas extra",
-    "add-file": "Añadir archivo",
+    "add-file": "Dodaj plik",
     "add-invoices": "Añadir facturas",
     "add-new-plugin": "Añadir nuevo plugin",
     "additional-text": "Texto adicional",
@@ -93,7 +93,7 @@
     "amount-without-discount": "Precio sin descuento",
     "and": "y",
     "any": "Cualquier",
-    "any-group": "Cualquier grupo",
+    "any-group": "Dowolna grupa",
     "apache-module-not-found": "Módulo de apache no encontrado: %module%",
     "apc-clear": "APC limpiado.",
     "apc-delete-key-item": "Eliminado elemento '%item%' de APC.",
@@ -133,7 +133,7 @@
     "auto-apply-to": "Aplicar automáticamente a",
     "automatic": "Automático",
     "available": "Disponible",
-    "average": "Media",
+    "average": "Średnia",
     "average-cost": "Precio medio",
     "average-purchase-price": "Precio medio de compra",
     "back": "Volver",
@@ -172,16 +172,16 @@
     "cache": "Caché",
     "cache-dir": "Carpeta de cache '%folderName%'",
     "calculate": "Calcular",
-    "calculated-net-diff": "Diferencia encontrada al calcular el neto. %net% VS %net2%",
-    "calculated-surcharge-diff": "Diferencia encontrada al calcular el recargo de equivalencia. %surcharge% VS %surcharge2%",
-    "calculated-tax-diff": "Diferencia encontrada al calcular el total de IVA. %tax% VS %tax2%",
+    "calculated-net-diff": "Znaleziono różnicę podczas obliczania netto. %net% VS %net2%",
+    "calculated-surcharge-diff": "Znaleziono różnicę podczas obliczania opłaty równowartości. %surcharge% VS %surcharge2%",
+    "calculated-tax-diff": "Znaleziono różnicę podczas obliczania całkowitego VATu. %tax% VS %tax2%",
     "calculation": "Cálculo",
     "calendar": "Calendario",
     "can-not-open-zip-file": "No puedo abrir archivo zip '%zipFile%'",
     "cancel": "Cancelar",
     "cancel-data": "Cancelar cambios u operación",
     "cancelled": "Cancelado",
-    "cannot-generate-accounting-entry": "Error al generar el asiento de la factura %invoice%",
+    "cannot-generate-accounting-entry": "Błąd podczas generowania księgowania faktury %invoice%",
     "cant-assign-date-already-regularized": "No se puede asignar la fecha %date% porque ya hay una regularización de %tax% para ese periodo.",
     "cant-assing-subaccount-supplier": "Imposible asociar la subcuenta para el proveedor %supplierCode%",
     "cant-associate-customer-subaccount": "Imposible asociar la subcuenta para el cliente %customerCode%",
@@ -201,11 +201,11 @@
     "cant-delete-default-tax": "No se puede eliminar el impuesto predeterminado",
     "cant-delete-default-warehouse": "No se puede eliminar el almacén por defecto",
     "cant-delete-last-user": "No se puede eliminar al último usuario",
-    "cant-delete-variant-with-documents": "No se puede eliminar el producto o variante %reference% porque ya ha sido comprado o vendido. Pero puede bloquearlo si lo desea.",
+    "cant-delete-variant-with-documents": "Nie można usunąć produktu lub wariantu %reference%, ponieważ został już kupiony lub sprzedany. Możesz go jednak zablokować, jeśli chcesz.",
     "cant-load-controller": "No se puede cargar el controlador '%controllerName%'.",
     "cant-modify-reference": "Imposible modificar la referencia.",
     "cant-remove-accounting-entry": "No se puede eliminar el asiento",
-    "cant-remove-invoice-refund": "No se puede eliminar una factura que ya tiene rectificativa (devolución)",
+    "cant-remove-invoice-refund": "Nie można usunąć faktury, która ma już zwrot",
     "cant-remove-receipt": "No se puede eliminar el recibo",
     "cant-update-audit-log": "No se puede modificar un registro de auditoria",
     "card": "Tarjeta",
@@ -280,7 +280,7 @@
     "company-commission-info": "Sólo se aplicará a la empresa seleccionada",
     "company-manager": "Administrador de la empresa",
     "company-name": "Nombre de empresa",
-    "company-warehouse": "Empresa\/Almacén",
+    "company-warehouse": "Firma\/Magazyn",
     "comparative": "Comparativo",
     "compared": "Comparado",
     "compatible": "Compatible",
