--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -18,7 +18,7 @@
     "account-data-missing": "Faltam dados na conta",
     "account-dot-code": "Punto para auocompletar zeros. Exemplo: 11.1 = 1100000001",
     "account-length": "Comprimento da conta",
-    "account-length-error": "erro no comprimento da conta",
+    "account-length-error": "Erro no comprimento da conta",
     "account-missing-in-balance": "A conta %codcuenta% tem saldo mas não está incluída nos balanços. Cuidado com furo de caixa",
     "account-parent-error": "A conta principal está incorreta ou não pertence ao exercício",
     "accounting": "Contabilidade",
@@ -53,7 +53,7 @@
     "add-all-disabled": "Adicionar todos desativados",
     "add-all-enabled": "Adicionar tudo ativado",
     "add-extra-lines": "Adicionar linhas extra",
-    "add-file": "Añadir archivo",
+    "add-file": "Adicionar arquivo",
     "add-invoices": "adicionar faturas",
     "add-new-plugin": "Adicionar novo plugin",
     "additional-text": "texto adicional",
@@ -76,7 +76,7 @@
     "alias-general-info": "Permite que você dê um nome ao valor da coluna à sua esquerda",
     "alias-wildcard-info": "Valor do alias definido anteriormente. Exemplo: %import%, %vat%",
     "all": "Todos",
-    "all-variants": "Todas las variantes",
+    "all-variants": "Todas as variantes",
     "allow-delete": "Permitir apagar",
     "allow-delete-data": "Permitir DELETE",
     "allow-export": "Permitir exportar",
@@ -88,22 +88,22 @@
     "allow-sale-without-stock": "Permitir venda sem estoque",
     "allow-sale-without-stock-n": "Permitir venda sem estoque nos novos produtos",
     "allow-update": "Permitir MODIFICAR",
-    "always-to-company-email": "Siempre al email de la empresa",
+    "always-to-company-email": "Sempre para o e-mail da empresa",
     "amount": "Montante",
     "amount-without-discount": "preço sem desconto",
-    "and": "and",
+    "and": "e",
     "any": "Qualquer",
-    "any-group": "Cualquier grupo",
+    "any-group": "Qualquer grupo",
     "apache-module-not-found": "modulo de apache não encontrado",
     "apc-clear": "APC limpo.",
     "apc-delete-key-item": "Elemento excluído '0' da APC.",
     "apc-get-key-item": "Obter o elemento '0' da APC.",
     "apc-set-key-item": "Elemento configurado '0' para APC.",
     "api": "API",
-    "api-disabled": "api desativado",
+    "api-disabled": "API desativada",
     "api-key": "API key",
     "api-keys": "API Keys",
-    "api-version-not-found": "Versión de API no encontrada",
+    "api-version-not-found": "Versão da API não encontrada",
     "app-preferences": "Preferências da aplicação",
     "applied-tax": "imposto aplicado",
     "apply": "Aplicar",
