--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -2,24 +2,24 @@
     "abbreviated": "Abreviado",
     "about": "Sobre",
     "accept": "Aceitar",
-    "accept-all": "Aceptar todo",
+    "accept-all": "Aceitar tudo",
     "accept-data": "Aceitar mudanças ou operação",
     "accept-privacy-policy": "Aceita a política de privacidade",
-    "accepted": "Aceptado",
+    "accepted": "Aceite",
     "accepts-emails-commas": "Aceita vários endereços de email separados por vírgula",
     "access-denied": "Acesso negado",
-    "access-denied-p": "Usted no tiene permiso para ver estos datos. Si cree que si que debería tener permiso para ver estos datos, contacte con su administrador para que le conceda permiso.",
+    "access-denied-p": "Não tem permissão para visualizar estes dados. Se acha que deveria ter permissão, contacte o administrador para obter permissão",
     "account": "Conta",
-    "account-bad-parent": "La cuenta %codcuenta% tiene asociada una cuanta padre equivocada.",
+    "account-bad-parent": "A conta %codcuenta% tem associado um pai de conta errado",
     "account-balance": "Saldo da Conta",
     "account-code": "Código de conta",
-    "account-code-bigger-than-subaccounts": "El código de la cuenta %code% es más largo que las subcuentas",
-    "account-code-lower-than-parent": "account-code-lower-than-parent",
+    "account-code-bigger-than-subaccounts": "O código da conta %code% é mais longo do que as subcontas",
+    "account-code-lower-than-parent": "Código de conta menor que o pai",
     "account-data-missing": "Faltando dados na conta",
     "account-dot-code": "Ponto para autocompletar zeros. Exemplo: 11.1 = 1100000001",
     "account-length": "Comprimento da conta",
-    "account-length-error": "Erro no comprimento do número de conta",
-    "account-missing-in-balance": "La cuenta %codcuenta% tiene saldo pero no está incluida en los balances. Considere incluirla si el balance sale descuadrado.",
+    "account-length-error": "Erro no comprimento do número da conta",
+    "account-missing-in-balance": "A conta %codcuenta% tem saldo mas não está incluída nos balanços. Considere incluí-la se o balanço estiver desequilibrado",
     "account-parent-error": "A conta principal está incorreta ou não pertence à conta pai",
     "accounting": "Contabilidade",
     "accounting-accounts": "Contas contábeis",
@@ -44,7 +44,7 @@
     "accounting-reports": "Relatórios de contabilidade",
     "accounting-within-regularization": "O registo contábil está dentro de uma regularização de %tax%. Não pode ser excluído.",
     "accounts": "Contas",
-    "accrual-date": "Fecha devengo",
+    "accrual-date": "Data de vencimento",
     "action": "Ação",
     "actions": "Ações",
     "active": "Ativo",
@@ -53,7 +53,7 @@
     "add-all-disabled": "Adicionar tudo desabilitado",
     "add-all-enabled": "Adicionar tudo habilitado",
     "add-extra-lines": "Adicionar linhas extra",
-    "add-file": "Añadir archivo",
+    "add-file": "Adicionar ficheiro",
     "add-invoices": "Adicionar Faturas",
     "add-new-plugin": "Adicionar novo plugin",
     "additional-text": "Texto adicional",
@@ -76,7 +76,7 @@
     "alias-general-info": "Permite que você dê um nome ao valor da coluna à sua esquerda",
     "alias-wildcard-info": "Valor do alias definido anteriormente. Exemplo: %import%, %vat%",
     "all": "Todos",
-    "all-variants": "Todas las variantes",
+    "all-variants": "Todas as variantes",
     "allow-delete": "Permitir apagar",
     "allow-delete-data": "Permitir ELIMINAR",
     "allow-export": "Permitir exportar",
