--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -18,7 +18,7 @@
     "account-data-missing": "Falten senyes en el conte",
     "account-dot-code": "Punt per a autocompletar zeros. Example: 11.1 = 1100000001",
     "account-length": "Llongitut del conte",
-    "account-length-error": "Longitud de subcompte errònia. El subcompte %code% ha de tenir la longitud definida en l'exercici.",
+    "account-length-error": "Longitud de subcompte errònia. El subcompte %code% ha de tindre la longitud definida en l'exercici.",
     "account-missing-in-balance": "El compte %codcuenta% té saldo però no està inclòs als balanços. Considereu incloure-la si el balanç surt desquadrat.",
     "account-parent-error": "El conte pare és incorrecte o no pertany a l'eixercici",
     "accounting": "Contabiltat",
@@ -44,7 +44,7 @@
     "accounting-reports": "Informes comptables",
     "accounting-within-regularization": "Ja hi ha una regularització d'impostos en aquest període. No es poden fer canvis.",
     "accounts": "Contes",
-    "accrual-date": "Fecha devengo",
+    "accrual-date": "Data de devengament",
     "action": "Acció",
     "actions": "Accions",
     "active": "Actiu",
@@ -53,7 +53,7 @@
     "add-all-disabled": "Afegir tot desactivat",
     "add-all-enabled": "Afegir-ho tot activat",
     "add-extra-lines": "Afegir línies extra",
-    "add-file": "Añadir archivo",
+    "add-file": "Afegir fitxer",
     "add-invoices": "Afegir factures",
     "add-new-plugin": "Afegir un nou complement",
     "additional-text": "Text adicional",
@@ -93,7 +93,7 @@
     "amount-without-discount": "Preu sense desconte",
     "and": "i",
     "any": "Qualsevol",
-    "any-group": "Cualquier grupo",
+    "any-group": "Qualsevol grup",
     "apache-module-not-found": "No s'ha trobat el mòdul d'apache %module%",
     "apc-clear": "APC netejat.",
     "apc-delete-key-item": "L'element '%item%' s'ha borrat de la APC.",
@@ -125,15 +125,15 @@
     "attribute-value-4": "Atribut 4",
     "attribute-values": "Valors de l'atribut",
     "attributes": "Atributs",
-    "audio": "Audio",
-    "august": "Agosto",
+    "audio": "Àudio",
+    "august": "Agost",
     "auth-token-invalid": "Calu API no vàlida",
     "authentication": "Autenticació",
     "auto": "Auto",
     "auto-apply-to": "Aplica automàticament a",
     "automatic": "Automatic",
     "available": "Disponible",
-    "average": "Media",
+    "average": "Mitjana",
     "average-cost": "Cost mig",
     "average-purchase-price": "Preu mitjà de compra",
     "back": "Tornar arrere",
@@ -151,7 +151,7 @@
     "bank-accounts": "Contes Bancaris",
     "bank-mandate": "Mandat",
     "bank-mandate-date": "Data Mandat",
-    "banking-movements": "Movimientos bancarios",
+    "banking-movements": "Moviments bancaris",
     "barcode": "Còdic de barres",
     "bcc": "CCO",
     "big": "Gran",
@@ -166,15 +166,15 @@
     "book": "Reservar",
     "box-closed-ok": "Caixa tancada correctament",
     "boxes": "Caixes",
-    "browse": "Examinar",
+    "browse": "Navegar",
     "business-name": "Raó social",
     "buy": "Comprar",
     "cache": "Caché",
     "cache-dir": "Carpeta de la caché '%folderName%'",
     "calculate": "Calcular",
-    "calculated-net-diff": "Diferencia encontrada al calcular el neto. %net% VS %net2%",
-    "calculated-surcharge-diff": "Diferencia encontrada al calcular el recargo de equivalencia. %surcharge% VS %surcharge2%",
-    "calculated-tax-diff": "Diferencia encontrada al calcular el total de IVA. %tax% VS %tax2%",
+    "calculated-net-diff": "Diferència trobada en calcular el net. %net% VS %net2%",
+    "calculated-surcharge-diff": "Diferència trobada en calcular el recàrrec d'equivalència. %surcharge% VS %surcharge2%",
+    "calculated-tax-diff": "Diferència trobada en calcular el total de l'IVA. %tax% VS %tax2%",
     "calculation": "Càlcul",
     "calendar": "Calendari",
     "can-not-open-zip-file": "No es pot obrir el fitxer zip '%zipFile%'",
